# openbb-integration

./: .gitignore  .mcp.json  CLAUDE.md  DASHBOARD.md  IMPROVEMENTS.md  PHASE2_PLAN.md  PHASE2_SUMMARY.md  PIPELINE_README.md  PROJECT_BRIEF_ENHANCEMENT.md  README.md  crontab.txt  dashboard.py  pipeline.py  project.md  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  shared.py
.github/workflows/: complexity-check.yml  lint.yml  tests.yml
.streamlit/: config.toml
pages/: 2_Economy.py  3_Reports.py  4_Research.py  5_Charts.py
scripts/: hourly_sync.sh
src/: __init__.py  analysis.py  brief_exporter.py  config.py  database.py  economic_dashboard.py  fetcher.py  mcp_server.py  report.py  research.py  retry.py  run_pipeline.py  sec_parser.py  storage.py  watchlist.py  watchlist_fetcher.py
tests/: conftest.py  test_allocation.py  test_analysis.py  test_brief_exporter.py  test_chart_pipeline.py  test_config.py  test_dashboard_none_values.py  test_data_roundtrip.py  test_data_validation.py  test_database.py  test_economic_dashboard.py  test_fetcher.py  test_freshness.py  test_mcp_server.py  test_page_loading.py  test_pipeline_integration.py  test_report.py  test_research.py  test_research_enhancements.py  test_retry.py  test_run_pipeline.py  test_sec_parser.py  test_shared.py  test_storage.py  test_watchlist.py  test_watchlist_fetcher.py
