[project]
name = "openbb-integration"
version = "0.1.0"
description = "Financial data pipeline and portfolio dashboard using OpenBB"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (test component interactions)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
